    TODO: Retina size support for icons and images used in user interface
    TODO: Hide PROGRESS:XX and other bidirectional communications syntax from output text field
    TODO: Fix broken "Select Image file as icon..." functionality on retina displays
    TODO: Make generated applications function even if they are moved while running. Requires IconFamily update.
    TODO: Long GNU named params for command line tool, e.g. --some-option
    TODO: New button-based output mode?

For 4.9.1
    TODO: Copy icon path for icon image well contextual menu
    TODO: High res retina icon images
    TODO: Higher res preset icons
    TODO: Fix issue when icon is dragged around: "sandbox extension creation failed: file system representation creation error for path"
    TODO: Make Status Items look good in Yosemite's Dark Mode: http://indiestack.com/2014/10/yosemites-dark-mode/
    TODO: Save authentication password?
    TODO: Fix Provide as Mac OS X service
    TODO: Support UTIs
    TODO: More examples
    TODO: Make class based system with inheritance for different output modes in ScriptExec
    * Fixed issue with Open... menu item and file types in ScriptExec
    * Font size in web output view can now also be increased/reduced
    * Increased text size in built-in editor
    * Updated documentation on files installed by command line tool
    * Dynamic (in code) install path for command line tool scripts
    * Platypus-generated apps now remember font size set by user
    * Auto-focus on app name text field on app launch

For 4.9
    * Users can now manually increase/decrease the font size in Platypus-generated apps
    * Status menu items can now be selected. This will run the script again with the menu title as an argument.
    * Arguments can now be passed to Platypus-generated apps via the command line
    * In Progress Bar output, it is now possible to use DETAILS:SHOW and DETAILS:HIDE to toggle details field visibility