@@ -65,6 +65,7 @@
 - (void)removeFile:(int)index;
 - (void)revealInFinder:(int)index;
 - (IBAction)copyFilename:(id)sender;
+- (IBAction)copyPaths:(id)sender;
 - (void)openInFinder:(int)index;
 - (IBAction)editFileInFileList:(id)sender;
 - (IBAction)addFileToFileList:(id)sender;
